Add unit tests for PLSQLParser and PLSQLStatementAndBraceFinder